# nativeappmanager

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
