[package]
name = "native-app-manager"
version = "1.0.1"
description = "A modern, minimalist application manager for Linux with smart cleanup"
authors = ["Pedro Farias"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
dirs = "6.0.0"
base64 = "0.22.1"
tauri-plugin-dialog = "2.6.0"
